Bug 423154 - "Default web shortcut" setting is not saved in Web Shortcuts kcm
Summary: "Default web shortcut" setting is not saved in Web Shortcuts kcm
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-18 13:16 UTC by Patrick Silva
Modified: 2020-06-19 15:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-18 13:16:12 UTC
STEPS TO REPRODUCE
1. open system settings > shortcuts > web shortcuts
2. open "Default web shortcut" dropdown and select an option (I selected ArchWiki and Google)
3. click on "Apply" button
4. leave Web Shortcuts kcm
5. reopen Web Shortcuts kcm

OBSERVED RESULT
the option selected in the step 2 was not saved

EXPECTED RESULT
select default web shortcut should be saved

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2
Comment 1 Bug Janitor Service 2020-06-19 10:44:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/57
Comment 2 Nate Graham 2020-06-19 15:30:05 UTC
Git commit 590dd7132705821b05e09ee50135937f28bf92ab by Nate Graham, on behalf of Alexander Lohnau.
Committed on 19/06/2020 at 15:29.
Pushed by ngraham into branch 'master'.

Fix setting of default shortcut in webshortcuts KCM

M  +2    -1    src/urifilters/ikws/ikwsopts.cpp

https://invent.kde.org/frameworks/kio/commit/590dd7132705821b05e09ee50135937f28bf92ab