Fix setting of default shortcut in webshortcuts KCM

BUG: 423154